# MissingDataInTimeSeries

./: 00.00_Generating Synthetic Data.ipynb  00.01_Imputing Synthetic Data.ipynb  01_Merging Data From FTSE Index.ipynb  02.00_Missingness Analysis Of Base Index S&P500.ipynb  02.01_Missing Analysis of all Indexes.ipynb  03_Merging All Indexes in One Dataframe.ipynb  04_Missing Analysis of the Complete Data Set.ipynb  05_Visual Analysis.ipynb  06.00_Imputation Using KNN.ipynb  06.01_Mean Imputation.ipynb  06.02_Imputation using Moving Average.ipynb  06.03_Missing Indicators Imputation.ipynb  06.04_Regression Imputation.ipynb  07.00_XGBoost-Knn.ipynb  07.01_XGBoost-Mean.ipynb  07.02_XGBoost-Moving Average.ipynb  07.03_XGBoost-Missing Indicators.ipynb  07.04_XGBoost-Regression Imputation.ipynb  07.05_XGBoost-Zero Imputation.ipynb  07_XGBoost.ipynb  README.md  Testing.ipynb  environment.yml  pyproject.toml
output/: KNNWeeklyImputed_test.csv  KNNWeeklyImputed_training.csv  MeanWeeklyImputed_test.csv  MeanWeeklyImputed_training.csv  MovingAverageWeeklyImputed_test.csv  MovingAverageWeeklyImputed_training.csv  RegressionWeeklyImputed_test.csv  RegressionWeeklyImputed_training.csv  seasonal_and_trend_complete.csv  seasonal_complete.csv  trend_complete.csv  white_noise_complete.csv
