[tool.poetry]
name = "missingdataintimeseries"
version = "0.1.0"
description = ""
authors = ["alfieriek <alfieriek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"
pandas = "^1.3.0"
numpy = "^1.22.0"
scipy = "^1.7.0"
scikit-learn = "^1.0.0"
notebook = "^7.3.2"
backports-zoneinfo = "^0.2.1"
xgboost = "2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
